// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toMatchVolumeSnapshot() > unit > 'binary mismatch' [fixture] > result 1`] = `
{
  "actual": BinaryFile {
    "data": "u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7uw==",
  },
  "expected": BinaryFile {
    "data": "qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqg==",
  },
  "message": "Found file content mismatch at \`/data.bin\`",
  "pass": false,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'different files' [new] > disk-snapshot 1`] = `
{
  "/.gitignore": [
    "file",
    "",
  ],
  "/bin.dat": [
    "file",
    "3q2+7w==",
  ],
  "/index-link.js": [
    "symlink",
    "/src/index.js",
  ],
  "/logs": null,
  "/src/index.js": [
    "file",
    "Ly8gaGk=",
  ],
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'different files' [new] > result 1`] = `
{
  "message": "Created snapshot at different-files",
  "pass": true,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'empty dir match' [fixture] > result 1`] = `
{
  "message": "Volume matched the snapshot at empty-dir",
  "pass": true,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'empty dir vs missing dir' [fixture] > result 1`] = `
{
  "actual": [
    "/empty",
  ],
  "expected": [
    "/",
  ],
  "message": "Directory structure didn’t match",
  "pass": false,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'empty dir' [new] > disk-snapshot 1`] = `
{
  "/empty": null,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'empty dir' [new] > result 1`] = `
{
  "message": "Created snapshot at empty-dir",
  "pass": true,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'empty volume' [fixture] > result 1`] = `
{
  "message": "Volume matched the snapshot at empty-vol",
  "pass": true,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'empty volume' [new] > disk-snapshot 1`] = `
{
  "/": null,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'empty volume' [new] > result 1`] = `
{
  "message": "Created snapshot at empty-volume",
  "pass": true,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'force no update' [new] > disk-snapshot 1`] = `"Error: ENOENT"`;

exports[`toMatchVolumeSnapshot() > unit > 'force no update' [new] > result 1`] = `
{
  "message": "Snapshot directory \`force-no-update\` does not exist",
  "pass": false,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'force update' [fixture] > disk-snapshot 1`] = `
{
  "/foo.txt": [
    "file",
    "aGk=",
  ],
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'force update' [fixture] > result 1`] = `
{
  "message": "Updated snapshot at empty-dir",
  "pass": true,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'force update' [new] > disk-snapshot 1`] = `
{
  "/foo.txt": [
    "file",
    "aGk=",
  ],
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'force update' [new] > result 1`] = `
{
  "message": "Created snapshot at force-update",
  "pass": true,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'invalid volume' [fixture] > disk-snapshot 1`] = `
{
  "/": null,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'invalid volume' [fixture] > result 1`] = `
{
  "actual": "invalid",
  "expected": Volume {},
  "message": "Expected received("invalid") to be a memfs Volume instance",
  "pass": false,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'invalid volume' [new] > disk-snapshot 1`] = `"Error: ENOENT"`;

exports[`toMatchVolumeSnapshot() > unit > 'invalid volume' [new] > result 1`] = `
{
  "actual": "invalid",
  "expected": Volume {},
  "message": "Expected received("invalid") to be a memfs Volume instance",
  "pass": false,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'prefix option' [new] > disk-snapshot 1`] = `
{
  "/foo.txt": [
    "file",
    "aGk=",
  ],
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'prefix option' [new] > result 1`] = `
{
  "message": "Created snapshot at prefix-option",
  "pass": true,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'reports mismatch when aborted using abortSignal' [fixture] > result 1`] = `
{
  "actual": File {
    "data": "hi",
  },
  "expected": File {
    "data": "__FILE_HANDLE_ABORT_READ__",
  },
  "message": "Found file content mismatch at \`/foo.txt\`",
  "pass": false,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects concurrency option' [fixture] > result 1`] = `
{
  "message": "Volume matched the snapshot at foo-bar",
  "pass": true,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects contentMatch=ignore option' [fixture] > result 1`] = `
{
  "message": "Volume matched the snapshot at foo-bar",
  "pass": true,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects ignore and prefix options' [fixture] > result 1`] = `
{
  "message": "Volume matched the snapshot at foo-dir",
  "pass": true,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects ignore and prefix options' [new] > disk-snapshot 1`] = `
{
  "/foo.txt": [
    "file",
    "aGk=",
  ],
  "/main.log": [
    "file",
    "aG9sYQ==",
  ],
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects ignore and prefix options' [new] > result 1`] = `
{
  "message": "Created snapshot at respects-ignore-and-prefix-options",
  "pass": true,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects ignore option (glob)' [fixture] > result 1`] = `
{
  "message": "Volume matched the snapshot at foo-dir",
  "pass": true,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects ignore option (glob)' [new] > disk-snapshot 1`] = `
{
  "/foo.txt": [
    "file",
    "aGk=",
  ],
  "/logs/bar.txt": [
    "file",
    "aGV5",
  ],
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects ignore option (glob)' [new] > result 1`] = `
{
  "message": "Created snapshot at respects-ignore-option-glob-",
  "pass": true,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects ignore option (ignore-all)' [new] > disk-snapshot 1`] = `
{
  "/": null,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects ignore option (ignore-all)' [new] > result 1`] = `
{
  "message": "Created snapshot at respects-ignore-option-ignore-all-",
  "pass": true,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects ignore option (mismatch)' [fixture] > result 1`] = `
{
  "actual": File {
    "data": "hello",
  },
  "expected": File {
    "data": "hi",
  },
  "message": "Found file content mismatch at \`/foo.txt\`",
  "pass": false,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects ignore option' [fixture] > result 1`] = `
{
  "message": "Volume matched the snapshot at foo-dir",
  "pass": true,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects ignore option' [new] > disk-snapshot 1`] = `
{
  "/foo.txt": [
    "file",
    "aGk=",
  ],
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects ignore option' [new] > result 1`] = `
{
  "message": "Created snapshot at respects-ignore-option",
  "pass": true,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects listMatch=ignore-extra option (mismatch)' [fixture] > result 1`] = `
{
  "actual": [
    "/foo.txt",
  ],
  "expected": [
    "/bar.txt",
    "/foo.txt",
    "/link.txt",
  ],
  "message": "Volume is missing 2 expected files",
  "pass": false,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects listMatch=ignore-extra option' [fixture] > result 1`] = `
{
  "message": "Volume matched the snapshot at foo-bar",
  "pass": true,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects listMatch=ignore-missing option (mismatch)' [fixture] > result 1`] = `
{
  "actual": [
    "/extra.txt",
    "/foo.txt",
  ],
  "expected": [
    "/foo.txt",
  ],
  "message": "Volume has 1 unexpected file",
  "pass": false,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects listMatch=ignore-missing option' [fixture] > result 1`] = `
{
  "message": "Volume matched the snapshot at foo-bar",
  "pass": true,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects prefix option (mismatch)' [fixture] > result 1`] = `
{
  "actual": File {
    "data": "hiz",
  },
  "expected": File {
    "data": "hi",
  },
  "message": "Found file content mismatch at \`/src/foo.txt\`",
  "pass": false,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects prefix option' [fixture] > result 1`] = `
{
  "message": "Volume matched the snapshot at foo-dir",
  "pass": true,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects report=all option (with ignore-extra)' [fixture] > result 1`] = `
{
  "actual": {
    "/foo.txt": {},
  },
  "expected": {
    "/bar.txt": File {},
    "/foo.txt": {},
    "/link.txt": Symlink {},
  },
  "message": "Found 2 missing paths",
  "pass": false,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects report=all option (with ignore-missing)' [fixture] > result 1`] = `
{
  "actual": {
    "/extra.txt": File {},
    "/foo.txt": {},
  },
  "expected": {
    "/foo.txt": {},
  },
  "message": "Found 1 unexpected path",
  "pass": false,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'respects report=all option' [fixture] > result 1`] = `
{
  "actual": {
    "/extra.txt": File {},
    "/foo.txt": {},
  },
  "expected": {
    "/bar.txt": File {},
    "/foo.txt": {},
    "/link.txt": Symlink {},
  },
  "message": "Found 3 mismatches: 2 missing paths, 1 unexpected path",
  "pass": false,
}
`;

exports[`toMatchVolumeSnapshot() > unit > 'symlink target mismatch' [fixture] > result 1`] = `
{
  "actual": Symlink {
    "target": "/target2.txt",
  },
  "expected": Symlink {
    "target": "/target1.txt",
  },
  "message": "Found symlink target mismatch at \`/link.txt\`",
  "pass": false,
}
`;
